www/custom.css
/* || TABLE OF CONTENTS - use ctrl + f */
/* || HEADER */
/* || MAIN SIDEBAR */
/* || SUBMENU AKA TREEVIEW MENU */
/* || DROP DOWN MENUS */
/* || BOXES */
/* || BUTTONS */
/* || HYPERLINKS*/
/* || HELP TEXT CIRCLE*/
/* || VALIDATION MESSAGES FOR PLOTS */
/* || CHANGELOG */

.content-wrapper {
  overflow: auto;
}

/* || HEADER */
.skin-black .main-header>.logo:hover {
    color: white; /*text color*/
    background-color: #16697A; /*dark blue*/
}

.skin-black .main-header .navbar {
    background-color: #16697A; /*dark blue*/
}

.skin-black .main-header>.logo {
    background-color: #16697A; /*dark blue*/
    color: white; /*text color*/
    border-bottom: 0 solid transparent;
    border-right: 1px solid #eee;
}

/* menu toggle button */
.skin-black .main-header .navbar>.sidebar-toggle {
    color: white; /*icon color*/
    background-color: #16697A; /*dark blue*/
    border-right: 1px solid #eee;
}

/* toggle button hover */
.skin-black .main-header .navbar .sidebar-toggle:hover {
    color: #16697A; /*icon color - dark blue*/
    background: white;
}

/* || MAIN SIDEBAR */

/*sidebar color*/
.skin-black .main-sidebar {
  background-color: white;
}

/*text color of sidebar menu options*/
.skin-black .sidebar a {
  color: black; /*text color*/
}

/*sidebar color when menu option with no submenu is selected*/
.skin-black .main-sidebar .active {
  background-color: white; /*text color*/
  color: black;
}

/*sidebar color when menu option with a submenu is selected*/
.skin-black .sidebar-menu>li.active>a, .skin-black .sidebar-menu>li:hover>a {
    color: black; /*text color*/
    background: #D0E7EC; /*sky*/
    border-left-color: white;
}

/* || SUBMENU AKA TREEVIEW MENU */

/*Opened submenu*/
.skin-black .sidebar-menu>li>.treeview-menu {
    margin: 0 1px;
    background: white; 
    color: black; /*text color*/
}

/*text color of submenu options when submenu is open*/
.skin-black .treeview-menu>li>a {
    color: black; /*text color*/
}

/*active and hover actions for submenu options*/
.skin-black .treeview-menu>li.active>a, 
.skin-black .treeview-menu>li>a:hover {
    color: black; /*text color*/
    background: #D0E7EC; /*sky*/
}

/* || DROP DOWN MENUS */

/*drop down select menu after data is uploaded*/
.bootstrap-select>.dropdown-toggle {
    width: 100%;
    border-color: #D0E7EC; /*sky*/
    color: black;
    background-color: white;
}

/*drop down select menu when data is not uploaded*/
.bootstrap-select>.dropdown-toggle.bs-placeholder {
    width: 100%;
    border-color: #D0E7EC; /*sky*/
    color: black;
    background-color: white;
}

/* || BOXES */

/*box titles*/
.box-title {
  color: black; /*text colors*/
}

/*fill and text color for box with positive/neutral information*/
.box.box-solid.box-info>.box-header {
    color: black; /*text color*/
    background: #D0E7EC; /*sky*/
    background-color: #D0E7EC; /*sky*/
}

/*outline color for box with positive/neutral information*/
.box.box-solid.box-info {
    border: 1px solid #D0E7EC; /*sky*/
}
/*box with negative alert or error info*/
.box.box-solid.box-danger>.box-header {
    color: black; /*text color*/
    background: #C2462E; /*coral*/
    background-color: #C2462E; /*coral*/
}

/*box with warning info*/
.box.box-solid.box-warning>.box-header {
    color: black; /*text color*/
    background: #FCB248; /*orange*/
    background-color: #FCB248; /*orange*/
}

/*color of tab for boxes*/
.nav-tabs-custom>.nav-tabs>li.active {
    border-top-color: #16697A; /*dark blue*/
}

/* || BUTTONS */
.btn, .btn-default {
  color: white; /*text color*/
  background-color:#C2462E; /*coral*/
  border-color: #C2462E; /*coral*/
}

/*button hover*/
.btn:hover {
  color: #C2462E; /*text color - coral*/
  background-color: white;
  border-color: #C2462E; /*text color - coral*/
}

.form-control {
    border-radius: 0;
    box-shadow: none;
    border-color: black;
    color: black; /*text color*/
}

/*|| HYPERLINKS*/

/*inactive hyperlink color*/
a {
    color: #16697A; /*text color - dark blue*/
}

/*hyperlink hover*/
a:hover {
    outline: 0;
    text-decoration: none;
    color: #C2462E; /*text color - coral*/
}

/*progress bar*/
.progress-bar {
    float: left;
    width: 0%;
    height: 100%;
    font-size: 12px;
    line-height: 20px;
    color: white; /*text color*/
    text-align: center;
    background-color: #16697A; /*dark blue*/
}

/* || HELP TEXT CIRCLE*/
#shiny-tab-tabHome .fa-info-circle {
  position:absolute;
  top:1em;
  right:1em;
}

/* || VALIDATION MESSAGES FOR PLOTS */
.shiny-output-error-validation {
  font-size: 20px;
  text-align: center;
  color: black; /*text color*/
}

/* || CHANGELOG */
#shiny-tab-tabChangelog td:first-child {
  white-space:nowrap;
  padding-right: 10px;
  padding-bottom:10px;
  vertical-align: top;
}

#shiny-tab-tabChangelog td:nth-child(2) {
  padding-bottom: 10px;;
}

#fileInfo.recalculating::before {
  content: "Your file is being processed";
}
#fileInfo.recalculating p {
  display: none;
}

/* DEMO MODE*/
#demo_toggle.pill-60, #demo_toggle.pill-60:hover {
  background: #000000
}
#demo_toggle-stateText {
  color: white;
}
.container-55 {
  padding: 11px;
}
.toggle-button-cover {
  display: table-cell;
  position: relative;
  width: 200px;
  box-sizing: border-box;
}

.button-cover {
  height: 13px;
  margin: 20px;
  box-shadow: 0 10px 20px -8px #c5d6d6;
  border-radius: 4px;
}
/*
.button-cover:before {
  counter-increment: button-counter;
  content: counter(button-counter);
  position: absolute;
  right: 0;
  bottom: 0;
  color: #d7e3e3;
  font-size: 12px;
  line-height: 1;
  padding: 5px;
}*/

.button-cover,
.knobs,
.layer {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.button {
  position: relative;
  top: 50%;
  width: 74px;
  height: 36px;
  margin: -20px auto 0 auto;
  overflow: hidden;
}

.button.r,
.button.r .layer {
  border-radius: 100px;
}

.button.b2 {
  border-radius: 2px;
}

.checkbox {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  opacity: 0;
  cursor: pointer;
  z-index: 3;
}

.knobs {
  z-index: 2;
}

.layer {
  width: 100%;
  background-color: #ececec;
  transition: 0.3s ease all;
  z-index: 1;
}
/* Demo Mode - OFF */
#button-1 .knobs:before {
  content: "OFF";
  position: absolute;
  top: 4px;
  left: 4px;
  width: 33px;
  height: 28px;
  color: #fff;
  font-size: 10px;
  font-weight: bold;
  text-align: center;
  line-height: 1;
  padding: 9px 4px;
  background-color: #a6a6a6;
  border-radius: 50%;
  transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
}
/* Demo Mode - ON */
#button-1 .checkbox:checked + .knobs:before {
  content: "ON";
  left: 37px;
  background-color: #FCB248;
  color: #000000;
}

#button-1 .checkbox:checked ~ .layer {
  background-color:#fef1de;
}

#button-1 .knobs,
#button-1 .knobs:before,
#button-1 .layer {
  transition: 0.3s ease all;
}

#demo-label {
  color: white;
  position: absolute;
  left: -53px;
  top: -4px;
}

/* Tooltip container */
.demo-tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
}

/* Tooltip text */
.demo-tooltip .demo-tooltiptext {
  visibility: hidden;
  width: 200px;
  background-color: white;
  border: 1px solid black;
  font-family: Arial;
  font-weight: normal;
  color: black;
  padding: 5px;
  border-radius: 6px;
  position: absolute;
  z-index: 3;
  margin-left: -120px;
  top: 20px;
  opacity: 0;
  transition: opacity 0.3s;
}

/* Tooltip arrow */
.demo-tooltip .demo-tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.demo-tooltip:hover .demo-tooltiptext {
  visibility: visible;
  opacity: 1;
}

#demo_banner {
  background-color: #FCB248;
  color: #000000; 
  text-align:center;
  height: 1.5em;
}

/* || SYSTEM OVERVIEW FILTERS */
#syso_date_range {
  display: inline-block;
}

#syso_header {
  background-color: #16697A;
  color: white;
  font-size: 1.4em;
}

.nav-tabs-custom>.tab-content[data-tabsetid="6238"] {
    padding: 0;
}

#sys_comp_summary_ui_chart {
  height:100% !important; /*otherwise, we get a 2nd scrollbar on sys overview page*/
}
#sys_comp_summary_ui_chart >img {
  width:100%
}

/* DISABLE FILTERS*/
.filter-disabled {
  pointer-events: none;
  color: gray;
}

.filter-disabled .dropdown-toggle {
  background-color: #F1F1F1;
}

#sys_inflow_outflow_download_tab,
#sys_status_download_tab,
#sys_comp_download_tab {
  float:right;
}

